[feat] Fix stretching of item images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,8 +169,10 @@ footer a{
 }
 
 #bookshelf img{
-  width: 196px;
-  height: 240px;
+  /*width: 196px;*/
+  /*height: 240px;*/
+  max-width: 100%;
+  max-height: 200px;
 }
 
 .bookitem{
